--- a/my-app/src/app/basic_post/views/html/basic-post.html
+++ b/my-app/src/app/basic_post/views/html/basic-post.html
@@ -1,1 +1,9 @@
 <p> This is a basic post </p>
+<div>
+    <span>
+    	Post<br>
+    	<!-- <img src = {{mCurrentPost.gifLink}}> Description : {{mCurrentPost.postDescription }} -->
+    </span>
+</div>
+
+
