--- a/my-app/src/app/basic_post/views/html/post-container.html
+++ b/my-app/src/app/basic_post/views/html/post-container.html
@@ -1,1 +1,9 @@
-<p> This is a post container </p>
+<!-- <p> This is a post container </p> -->
+<div>
+<ul>
+  	<div ngFor = "let p of mPosts">
+  		<basic-post [(mCurrentPost)] = "p" type="BasicPostModel"> </basic-post>
+  	</div>
+ 
+</ul>
+</div>
